--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_baseline_home_24"
+            android:title="Inicio" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/ic_baseline_my_location_24"
+            android:title="Ubicación" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/ic_baseline_star_24"
+            android:title="Evalua" />
+        <item
+            android:id="@+id/notificacione"
+            android:icon="@drawable/ic_baseline_notifications_24"
+            android:title="Notificaciones" />
+        <item
+            android:id="@+id/seguimiento"
+            android:icon="@drawable/ic_baseline_access_time_24"
+            android:title="Seguimiento" />
     </group>
 </menu>
